# quadcopter_ws

./: .gitmodules
install/: local_setup.sh  setup.sh
install/cpp_srvcli/lib/cpp_srvcli/: client  server
install/cpp_srvcli/share/cpp_srvcli/: package.sh  package.xml
install/rf24_transceiver/share/rf24_transceiver/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/services/lib/services/: command_svc
install/services/share/services/: local_setup.sh  package.ps1  package.sh
install/services/share/services/cmake/: servicesConfig.cmake
install/tutorial_interfaces/share/tutorial_interfaces/: local_setup.sh  package.sh  package.xml
install/tutorial_interfaces/share/tutorial_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake
log/: latest_build
src/command_and_control/: CMakeLists.txt  package.xml
src/command_and_control/include/command_and_control/: rf24_transceiver.hpp
src/command_and_control/src/: rf24_transceiver.cpp
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: RawDataMsg.msg  TelemetryMsg.msg
src/interfaces/srv/: SendCommand.srv
